--- a/JavaScript/web-app/edit-product.html
+++ b/JavaScript/web-app/edit-product.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Edit Product</h2>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     <input type="text" id="product-title" placeholder="Product Title">
     <input type="text" id="product-price" placeholder="Product Price">
     <span id="last-edit"></span>
